add bod and first page

--- a/_support/templates/latex/main.mustache
+++ b/_support/templates/latex/main.mustache
@@ -29,6 +29,14 @@
 % =================================================================
 \begin{document}
 
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
+\thispagestyle{empty}
+\mbox{}
+
+
 % Title page and colophon on verso
 \maketitle
 \pagestyle{titlingpage}
