--- a/_support/templates/latex/main.mustache
+++ b/_support/templates/latex/main.mustache
@@ -83,7 +83,7 @@ Keepers of the lighthouse\\
 Édition : BoD - Books on Demand,\\
 12/14 rond-point des Champs-Élysées,75008 Paris\\
 Impression : Books on Demand GmbH, Norderstedt, Allemagne\\
-ISBN: XXXXXXX\\
+ISBN: 9782322506187\\
 Dépôt légal : 11/2024\\
 Layout and typography based on the \textcode{sbabook} \LaTeX{} class by Damien Pollet.
 }
